--- a/fe/bikefitting-fe/package.json
+++ b/fe/bikefitting-fe/package.json
@@ -38,11 +38,14 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.525.0",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-day-picker": "^9.8.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.60.0",
     "react-phone-number-input": "^3.4.12",
+    "react-zoom-pan-pinch": "^3.7.0",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "vaul": "^1.1.2",
