--- a/be/bikefitting-be/src/main/resources/application.yaml
+++ b/be/bikefitting-be/src/main/resources/application.yaml
@@ -14,3 +14,12 @@ spring:
 server:
   port: 8080
   address: 0.0.0.0
+
+logging:
+  level:
+    curlin.danko.bikefitting: DEBUG
+    org.springframework.web: DEBUG
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
