--- a/.github/workflows/backend-spring-api.yml
+++ b/.github/workflows/backend-spring-api.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run chmod to make gradlew executable
-        run: chmod +x ./gradlew
+        run: chmod +x ./be/bikefitting-be/gradlew
 
       - name: Set up JDK
         uses: actions/setup-java@v4
