--- a/.github/workflows/frontend-react-app-deploy.yml
+++ b/.github/workflows/frontend-react-app-deploy.yml
@@ -48,6 +48,7 @@ jobs:
           npm run build
         env:
           NODE_ENV: production
+          VITE_FITTERS: ${{ secrets.VITE_FITTERS }}
           VITE_API_BASE_URL: ${{ secrets.VITE_API_BASE_URL }}
 
       - name: Setup Pages
