--- a/fe/bikefitting-fe/public/manifest.json
+++ b/fe/bikefitting-fe/public/manifest.json
@@ -1,27 +1,27 @@
 {
-  "short_name": "Bike Fitting",
-  "name": "Bike Fitting App",
-  "description": "Professional bike fitting application",
+  "short_name": "SeginBikeFit",
+  "name": "Segin Bike Fitting App",
+  "description": "Application for bike fitting",
   "icons": [
     {
-      "src": "favicon.svg",
+      "src": "s.svg",
       "sizes": "32x32",
       "type": "image/svg+xml"
     },
     {
-      "src": "bike-icon.svg",
+      "src": "s.svg",
       "type": "image/svg+xml",
       "sizes": "192x192 512x512",
       "purpose": "any maskable"
     },
     {
-      "src": "bike-192.png",
+      "src": "s192.png",
       "type": "image/png",
       "sizes": "192x192",
       "purpose": "any maskable"
     },
     {
-      "src": "bike-512.png",
+      "src": "s512.png",
       "type": "image/png",
       "sizes": "512x512",
       "purpose": "any maskable"
